feat: implementar melhorias de alta prioridade
- Adicionar navegacao por teclado (ESC, 1-4)
- Adicionar meta tags sociais (Open Graph/Twitter)
- Implementar transicoes suaves entre secoes
- Adicionar botao de download de CV
- Integrar EmailJS para formulario de contato real
- Melhorar acessibilidade com aria-labels
- Adicionar indicadores visuais de atalhos de teclado

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,25 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <title>Hélio Paulo - Dev Portfolio</title>
-    <meta name="description" content="Portfólio interativo de Hélio Paulo Leite de Lima - Engenheiro de Automação e Desenvolvedor de Software" />
+    <meta name="description" content="Portfólio interativo de Hélio Paulo Leite de Lima - Engenheiro de Automação e Desenvolvedor de Software especializado em IA, Machine Learning e Robótica" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dev-hp.github.io/dev-portforlio/" />
+    <meta property="og:title" content="Hélio Paulo - Dev Portfolio" />
+    <meta property="og:description" content="Portfólio interativo com tema terminal - Engenheiro de Automação e Desenvolvedor de Software" />
+    <meta property="og:image" content="https://dev-hp.github.io/dev-portforlio/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dev-hp.github.io/dev-portforlio/" />
+    <meta property="twitter:title" content="Hélio Paulo - Dev Portfolio" />
+    <meta property="twitter:description" content="Portfólio interativo com tema terminal - Engenheiro de Automação e Desenvolvedor de Software" />
+    <meta property="twitter:image" content="https://dev-hp.github.io/dev-portforlio/og-image.png" />
+    
+    <!-- Keywords -->
+    <meta name="keywords" content="desenvolvedor, engenheiro, automação, machine learning, IA, robótica, portfolio, hélio paulo" />
+    <meta name="author" content="Hélio Paulo Leite de Lima" />
     <!-- Google Fonts: JetBrains Mono -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
