feat(fase2): otimizacoes de performance e PWA - Remover 39 dependencias nao usadas (axios, express, react-query, etc) - Implementar lazy loading de secoes com Suspense - Adicionar PWA manifest.json para instalacao - Criar robots.txt e sitemap.xml para SEO - Adicionar transicoes suaves entre secoes - Remover server nao usado (projeto e SPA) - Reduzir bundle size significativamente

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#00ff80" />
     <title>Hélio Paulo - Dev Portfolio</title>
     <meta name="description" content="Portfólio interativo de Hélio Paulo Leite de Lima - Engenheiro de Automação e Desenvolvedor de Software especializado em IA, Machine Learning e Robótica" />
     
